--- a/4.1_loops/loops_(good).ipynb
+++ b/4.1_loops/loops_(good).ipynb
@@ -816,12 +816,99 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8e27b53c-4074-47c6-911e-33ef0947f971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Black Widow is Marvel's Natasha Romanoff!\n",
+      "Iron Man is Marvel's Tony Stark!\n",
+      "Doctor Strange is Marvel's Stephen Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info={\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                \"Tony Stark\": \"Iron Man\",\n",
+    "                \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for super_name, real_name in superhero_info.items():\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "2ca6f559",
+   "id": "6ec2645b-a84d-450d-94c9-cf1a70a7f352",
    "metadata": {},
    "source": [
-    "## Footnotes"
+    "The ‘hidden’ function items() spits out both the key and the corresponding value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c5fbcdb6-d05e-42d9-b5d5-d18da10fadb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info={\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                \"Tony Stark\": \"Iron Man\",\n",
+    "                \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for key, value in superhero_info.items():\n",
+    "    print(f\"{key} is Marvel's {value}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb875e2-cb28-4bac-aa5c-cae705402e07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75dd7a5b-8c26-4f18-8867-1e993b2225cd",
+   "metadata": {},
+   "source": [
+    "If you like, you can directly access the keys as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e92f884c-54a8-4013-9da4-6ec28024baf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in superhero_info.keys():\n",
+    "    value=superhero_info[key]\n",
+    "    print(f\"{key} is Marvel's {value}!\")"
    ]
   }
  ],
