READY_FOR_REVIEW_storing_data_(need)_exercises

--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6f7f44ac-ed84-4f04-a536-d4dd4772193d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "d2c86dc0-9923-4ccb-95a5-f079571ce215",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f91f41c6-650e-4617-a204-d75750660a8d",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "18e36436-90a7-4cd7-a437-7f5dcda5ad65",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "2565f31b-2e56-4a79-b648-e264c8d479f7",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "'Boron'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "c4e2b844-6f96-45cb-9d74-3dd23bfcf524",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "'Boron'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "eaba89d8-6d6d-4315-b110-cbedb45641b8",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "a60ae688-0ed5-4d8f-a6af-d87a01b450f3",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "       False, False, False, False, False])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "7e519c01-8f6a-47eb-8d2e-28a5c71f520f",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "b53c76d6-8ea3-4a7d-9d82-102ac102844a",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "938dcd84-a69a-47dd-a35f-86fad1639968",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "4bd08e0f-51d9-4eac-96bc-c1c543f2f133",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "id": "54691f18-152a-47f2-a4e4-8755f850558e",
    "metadata": {},
    "outputs": [
@@ -319,26 +319,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "0.9871796626270701\n"
      ]
     }
    ],
    "source": [
     "# Determine the Pearson correlaion coefficient r for the two datases. **Don't** use np.corrcoef()!\n",
     "\n",
+    "import numpy as np\n",
     "\n",
-    "numerator = np.sum(np_x_1.std() * np_x_2.std())                            # Calculate the numerator\n",
+    "# Calculating the means\n",
+    "mean_x1 = np_x_1.mean()\n",
+    "mean_x2 = np_x_2.mean()\n",
     "\n",
-    "denominator = np.sqrt(np.sum(np_x_1.std()**2) * np.sum(np_x_2.std()**2))   # Calculate the denominator\n",
+    "# Calculating the numerator \n",
+    "numerator = np.sum((np_x_1 - mean_x1) * (np_x_2 - mean_x2))\n",
     "\n",
-    "r = numerator/denominator                                                  # Calculate r \n",
+    "# Calculating the denominator \n",
+    "denominator = np.sqrt(np.sum((np_x_1 - mean_x1) ** 2)) * np.sqrt(np.sum((np_x_2 - mean_x2) ** 2))\n",
     "\n",
-    "print(r)"
+    "# Calculating the Pearson correlation coefficient\n",
+    "r = numerator / denominator\n",
+    "\n",
+    "print (r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "0507b58e-f1bf-4d8c-89ce-515ca585a848",
    "metadata": {},
    "outputs": [
@@ -346,14 +354,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "[[1.         0.98717966]\n",
+      " [0.98717966 1.        ]]\n"
      ]
     }
    ],
    "source": [
     "# Calculate Pearson correlation coefficient using np.corrcoef\n",
     "\n",
-    "r = np.corrcoef(np_x_1 + np_x_2)\n",
+    "r = np.corrcoef(np_x_1, np_x_2)\n",
     "print(r)"
    ]
   },
@@ -377,6 +386,30 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "74bd2ea6-0120-4b63-b296-b6065f7d4a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "204 μs ± 3.87 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "numerator = np.sum(np_x_1.std() * np_x_2.std())                            # Calculate the numerator\n",
+    "\n",
+    "denominator = np.sqrt(np.sum(np_x_1.std()**2) * np.sum(np_x_2.std()**2))   # Calculate the denominator\n",
+    "\n",
+    "r = numerator/denominator                                                  # Calculate r "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e649e80d-3865-4c6e-ac51-5713c0399378",
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +457,22 @@
    "source": [
     "The np.corrcoef() generates the code faster than the first method according to %%timeit. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59ced33e-aa0c-4435-b651-3f597dbbf724",
+   "metadata": {},
+   "source": [
+    "_np.corrcoef() gives us an array while the other does not_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf1ece8-8f1a-4c46-be84-65d992848865",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
