READY_FOR_REVIEW_storing_data_(good)_exercises

--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -34,10 +34,10 @@
    "source": [
     "|**Term**| **Brief description**| \n",
     "|:---    | :--- |\n",
-    "| Subsetting | To select something. | \n",
+    "| Subsetting | To select a particular data in a list or an array. | \n",
     "| Indexing | To select one specific element that we want. |\n",
     "| Slicing | To select a range of elements. |\n",
-    "| Masking | _Kills off all the False data, and the code generated will only be the True data._ |"
+    "| Masking | _Kills off all the False data, and the code generated will only be the True data, set by a condition._ |"
    ]
   },
   {
