READY_FOR_REVIEW_loops_(need)_exercises

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -61,12 +61,12 @@
    "id": "d0cee9bf-919e-4c8e-9b02-3344242140a7",
    "metadata": {},
    "source": [
-    "## Exercise 2"
+    "## Exercise 2 (Multiplication Table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "8b8ed3e6-994d-4e2b-ae2f-d1edc371e9bb",
    "metadata": {},
    "outputs": [
@@ -74,71 +74,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "\n",
-      "\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "\n",
-      "\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "\n",
-      "\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "\n",
-      "\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "\n",
-      "\n"
+      "1: 1   2   3   4   5   \n",
+      "2: 2   4   6   8   10  \n",
+      "3: 3   6   9   12  15  \n",
+      "4: 4   8   12  16  20  \n",
+      "5: 5   10  15  20  25  \n"
      ]
     }
    ],
    "source": [
-    "for row in ['1', '2', '3', '4', '5']:\n",
-    "    for column in [1, 2, 3, 4, 5]: \n",
-    "        print (f'{row}{column}')\n",
-    "    print ('\\n')"
+    "# Create the outer loop for the rows (1-5)\n",
+    "\n",
+    "for row in range (1,6):\n",
+    "    print(f'{row}:', end =' ')\n",
+    "\n",
+    "# Create the inner loop for the columns (1-5)\n",
+    "    for column in range (1,6):\n",
+    "        print (f'{row * column:<4}', end='')      # < 3 to align numbers with width of 4 spaces\n",
+    "\n",
+    "# This is for a new line after each row\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc299ce-fb0f-46c9-a452-fadbe007e851",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 (Stimulating a Coin Flip Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "da62a5af-3d27-43d0-bd54-429519e826b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1c4625d9-a201-435e-8590-74fbe31d8556",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.05065117, 0.54336192, 0.95387716, 0.91150524, 0.25293958,\n",
+       "       0.64238403, 0.58412996, 0.60323508, 0.09223927, 0.12776452])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1f2b50c8-3981-4efa-aa8b-5fe8816f8e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment 1: No. of Heads = 3\n",
+      "Experiment 2: No. of Heads = 5\n",
+      "Experiment 3: No. of Heads = 7\n",
+      "Experiment 4: No. of Heads = 5\n",
+      "Experiment 5: No. of Heads = 4\n",
+      "Experiment 6: No. of Heads = 3\n",
+      "Experiment 7: No. of Heads = 5\n",
+      "Experiment 8: No. of Heads = 7\n",
+      "Experiment 9: No. of Heads = 5\n",
+      "Experiment 10: No. of Heads = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Defining the number of experiments and flips per experiment\n",
+    "number_of_experiments = 10\n",
+    "flips_per_experiment = 10\n",
+    "\n",
+    "# Creating the for loop (main outer loop)\n",
+    "for experiment in range(1, number_of_experiments + 1):\n",
+    "    \n",
+    "    # Simulating 10 coin flips and count the number of heads (inner loop)\n",
+    "    heads_count = sum(random.choice([0, 1]) for _ in range(flips_per_experiment))\n",
+    "    \n",
+    "    # Print the result for each experiment\n",
+    "    print(f\"Experiment {experiment}: No. of Heads = {heads_count}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf7ab28-e55b-4e33-a044-5cd7c69304bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f2b50c8-3981-4efa-aa8b-5fe8816f8e7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cdb392e-55a1-4103-8690-f4568ff03a60",
+   "id": "57828e68-3a3e-42e9-9e59-5caeb6055ee6",
    "metadata": {},
    "outputs": [],
    "source": []
