READY_FOR_REVIEW_loops_(need)_exercises

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "1f2b50c8-3981-4efa-aa8b-5fe8816f8e7e",
    "metadata": {},
    "outputs": [
@@ -146,16 +146,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment 1: No. of Heads = 3\n",
-      "Experiment 2: No. of Heads = 5\n",
-      "Experiment 3: No. of Heads = 7\n",
-      "Experiment 4: No. of Heads = 5\n",
-      "Experiment 5: No. of Heads = 4\n",
-      "Experiment 6: No. of Heads = 3\n",
-      "Experiment 7: No. of Heads = 5\n",
-      "Experiment 8: No. of Heads = 7\n",
-      "Experiment 9: No. of Heads = 5\n",
-      "Experiment 10: No. of Heads = 3\n"
+      "Experiment  1: No. of Heads = 4\n",
+      "Experiment  2: No. of Heads = 5\n",
+      "Experiment  3: No. of Heads = 6\n",
+      "Experiment  4: No. of Heads = 6\n",
+      "Experiment  5: No. of Heads = 7\n",
+      "Experiment  6: No. of Heads = 4\n",
+      "Experiment  7: No. of Heads = 5\n",
+      "Experiment  8: No. of Heads = 5\n",
+      "Experiment  9: No. of Heads = 5\n",
+      "Experiment 10: No. of Heads = 7\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
     "    heads_count = sum(random.choice([0, 1]) for _ in range(flips_per_experiment))\n",
     "    \n",
     "    # Print the result for each experiment\n",
-    "    print(f\"Experiment {experiment}: No. of Heads = {heads_count}\")\n"
+    "    print(f\"Experiment {experiment:>2}: No. of Heads = {heads_count}\")\n"
    ]
   },
   {
